--- a/src/lib/scss/typeface.scss
+++ b/src/lib/scss/typeface.scss
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Urbanist:700|Urbanist:400');
-
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap');
 body {
-  font-family: 'Urbanist';
+  font-family: 'Fira Sans';
   font-weight: 400;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Urbanist';
+  font-family: 'Fira Sans';
   font-weight: 700;
+}
+
+b {
+  font-family: 'Fira Sans';
+  font-weight: 500;
 }
 
 html {font-size: 100%;} /* 16px */
