Added initial product page.

--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -24,6 +24,7 @@ html {
         
         p, h1, h2, h3, h4, h5, h6 {
             overflow-wrap: break-word;
+            background-color: transparent;
         }
         
         #root, #__next {
