--- a/src/lib/scss/typeface.scss
+++ b/src/lib/scss/typeface.scss
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap');
 body {
-  font-family: 'Fira Sans';
+  font-family: 'Open Sans';
   font-weight: 400;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Fira Sans';
-  font-weight: 700;
+  font-family: 'Open Sans';
+  font-weight: 900;
 }
 
 b {
-  font-family: 'Fira Sans';
+  font-family: 'Open Sans';
   font-weight: 500;
 }
 
