--- a/src/lib/scss/colors.scss
+++ b/src/lib/scss/colors.scss
@@ -1,5 +1,5 @@
-$text: hsl(0, 0%, 10%);
-$background: hsl(150, 20%, 98%);
+$text: #2E2E2E;
+$background: #FFFCFC;
 $primary: hsl(177, 23%, 65%);
 $secondary: hsl(204, 22%, 87%);
 $accent: hsl(206, 23%, 47%);
