--- a/src/lib/scss/colors.scss
+++ b/src/lib/scss/colors.scss
@@ -1,5 +1,5 @@
-$text: #2E2E2E;
-$background: #FFFCFC;
+$text: #424242;
+$background: #fcfcfc;
 $primary: hsl(177, 23%, 65%);
 $secondary: hsl(204, 22%, 87%);
 $accent: hsl(206, 23%, 47%);
