--- a/src/lib/scss/typeface.scss
+++ b/src/lib/scss/typeface.scss
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500&display=swap');
 
 * {
   font-family: 'Fira Sans Condensed', serif;
 }
 
 body {
-  font-weight: 300;
+  font-weight: 400;
 }
 
-h1, h2, h3, h4, h5, strong {
-  font-weight: 400;
+h1, h2, h3, h4, h5, b, strong {
+  font-weight: 500;
 }
 
 html {font-size: 100%;} /* 16px */
