--- a/src/lib/scss/responsivity.scss
+++ b/src/lib/scss/responsivity.scss
@@ -2,24 +2,11 @@ html {
     height: 100%;
     width: 100%;
     transition: 0.5s;
+    font-size: clamp(12px, 0.95dvw, 24px);
 
     body {
         margin-top: 4em;
         width: clamp(250px, 100dvw, 100%);
         padding: 0 4dvw;
-    }
-
-
-    @media (height < 700px) and (width < 700px) {
-        font-size: 12px;
-    }
-    @media (height > 1000px) and (width > 700px) {
-        font-size: 18px;
-    }
-    @media (height > 1000px) and (width > 1000px) {
-        font-size: 24px;
-    }
-    @media (height > 1200px) and (width > 900px) {
-        font-size: 28px;
     }
 }
