--- a/src/lib/scss/responsivity.scss
+++ b/src/lib/scss/responsivity.scss
@@ -7,6 +7,6 @@ html {
     body {
         margin-top: 4em;
         width: clamp(250px, 100dvw, 100%);
-        padding: 0 4dvw;
+        padding: 0 4dvw 4em;
     }
 }
